--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_storage: ^12.4.5
   google_sign_in: ^6.3.0
   google_fonts: ^6.2.1
+  animated_text_kit: ^4.2.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
