--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   google_fonts: ^6.2.1
   animated_text_kit: ^4.2.3
   image_picker: ^1.1.2
+  google_fonts: ^6.2.1
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +31,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/images/
