--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: client
+name: echo
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^1.1.2
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
