--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   json_annotation: ^4.9.0
   fluttertoast: ^8.2.12
   intl: ^0.20.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
