--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   fluttertoast: ^8.2.12
+  gal: ^1.2.6
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
+  path: ^1.9.0
+  permission_handler: ^11.3.0
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
