--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,16 @@ dependencies:
   animated_text_kit: ^4.2.3
   image_picker: ^1.1.2
   table_calendar: ^3.0.9
-  freezed_annotation: ^3.0.0
-  json_annotation: ^4.9.0
-  fluttertoast: ^8.2.12
   intl: ^0.20.2
   path: ^1.9.1
+  uuid: ^4.5.1
+  just_audio: ^0.10.2
+  path_provider: ^2.1.5
+  dio: ^5.8.0+1
+  video_player: ^2.9.5
+  chewie: ^1.11.3
+  record: ^6.0.0
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
