--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   chewie: ^1.11.3
   record: ^6.0.0
   permission_handler: ^12.0.0+1
+  google_speech: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -45,3 +46,5 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/profile/
+    - assets/credentials/
+    - .env
