--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.2.1
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +43,19 @@ dev_dependencies:
   build_runner: ^2.4.15
   freezed: ^3.0.6
   json_serializable: ^6.9.5
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/echo_logo.png"
+  image_path_ios: "assets/icons/echo_logo.png"
+  min_sdk_android: 21
+  remove_alpha_channel_ios: true
+  web:
+    generate: true
+    image_path: "assets/icons/echo_logo.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
 
 flutter:
   uses-material-design: true
